# thermostat-controller

./: .gitignore
assets/: Themes.slt  Thermostat_Controller.sll  Thermostat_Controller.spj  Thermostat_Controller_events.py
assets/assets/: ui_font_Ubuntu_Bold_180.c  ui_font_Ubuntu_Bold_180.fcfg  ui_font_Ubuntu_Bold__45.fcfg  ui_font_Ubuntu_Bold__75.fcfg  ui_font_Ubuntu_Regular_45.fcfg  ui_font_Ubuntu_Regular__20.fcfg
firmware/: Config_rfbridge_8.3.1.dmp  README.md  platformio.ini  sana_3gang_pinout.txt
firmware/.pio/libdeps/esp32/TFT_eSPI/: User_Setup.h  User_Setup_Select.h
firmware/.pio/libdeps/esp32/TFT_eSPI/User_Setups/: Setup21_ILI9488.h  Setup27_RPi_ST7796_ESP32.h
firmware/.pio/libdeps/esp32/lvgl/: lv_conf.h
firmware/lib/: wifimanager
firmware/src/: configuration.h  lcd.cpp  lcd.h  main.cpp  mdns.cpp  mdns.h  mqtt.cpp  mqtt.h  ota.cpp  ota.h  relay.cpp  relay.h  sensor.cpp  sensor.h  storage.cpp  storage.h  switch.cpp  switch.h  webserver.cpp  webserver.h
firmware/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Main.c  ui_Main.h  ui_SettingsScreen.c  ui_SettingsScreen.h  ui_comp_hook.c  ui_events.c  ui_events.cpp  ui_events.h  ui_font_Ubuntu_Bold__45.c  ui_font_Ubuntu_Bold__75.c  ui_font_Ubuntu_Regular_45.c  ui_font_Ubuntu_Regular__20.c  ui_helpers.c  ui_helpers.h  ui_img_down_arrow_png.c  ui_img_flame_off_png.c  ui_img_flame_png.c  ui_img_gear_png.c  ui_img_up_arrow_png.c  ui_img_wifi_off_png.c  ui_img_wifi_png.c  ui_themes.c  ui_themes.cpp  ui_themes.h
